--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "chart.js": "^4.5.0",
+    "chartjs-plugin-zoom": "^2.2.0",
+    "dayjs": "^1.11.13",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2"
   },
